 /* $Id: changelog,v 1.800 2000-03-11 20:06:28 sandervl Exp $ */

 2000-03-11: Przemyslaw Dobrowolski <dobrawka@asua.org.pl>
	- OPENGL\GLIDE: Fix for Voodoo 1 glide (missing io ports)

 2000-03-11: knut st. osmundsen <knut.stange.osmundse@pmsc.no>
        - OPENGL\GLUT: Fix for gettimeofday. This is defined conflicting in
                the toolkit sys\time.h.
        - TOOLS\BIN: Implemented an optional directory locking in
                dowithdirs.cmd. (Useful for SMP builds.)

 2000-03-11: Sander van Leeuwen <sandervl@xs4all.nl>
	- OPENGL\GLUT: Fixed compile problems + cleanup
                       (use C(XX)FLAGS_WIN32APP so you don't have to
                        explicitely specify which api type you use (ascii or unicode)!)

	- OPENGL\GLIDE: Fixed wrong binary path for voodoo1 glide

 2000-03-11: Jeroen van den Horn <J.vandenHorn@fibre.a2000.nl>
        - OPENGL: Fixed error preventing build to complete

 2000-03-09: Sander van Leeuwen <sandervl@xs4all.nl>
        - KERNEL32: Set initial max nr of file handles to 256 during kernel32 init
                    Create DDRAW & DSOUND registry keys in InitRegistry
                    (NOTE: Must be done in install program!)
                    Added some win95 stubs
        - GDI32:    Added 16 bits device apis stubs

 2000-03-10: Michal Necasek <mike@mendelu.cz>
        - dsound\new: Changed DART buffer size calcualation, hopefully
                      WinAmp will sound better now.


 2000-03-09: knut st. osmundsen <knut.stange.osmundse@pmsc.no>
        - include\pdwin32.tools: New tool, EXISTS --> \tools\bin\Exists.cmd
        - tools\bin\Exists.cmd: New tool which checks if the file passed in
                exists. If the file exists it returns 0, else 1. This is
                used to check if .depend and other files exists in the
                makefiles. (See pdwin32.post to see how.)
        - include\pdwin32.post: .depend is only included if it exists. You'll